tests(ziphyr): covering more cases
Including passwordless zip-unzip, primeless object and closed stream.

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ setenv =
 commands =
     coverage erase
     coverage run setup.py test
-    coverage report --omit='.tox/*'
+    coverage report --show-missing --omit='.tox/*'
 
 [testenv:flake8]
 basepython = python3
